# sihankor

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  clippy.toml  司衡体系严苛审阅报告.md  司衡体系审阅-从形而上学到工程落地的系统性失败.md  司衡体系重新推导设计文档.md
.github/workflows/: test.yml
.harness/: agent.md
.mavis/plans/: decision.json  plan.yaml
.sih/: config.yml  experiment_c_adjusted.md  experiment_c_report.md  semantic.yml
.sih/corrections/: 260623-1100-grilling-engine-builder-gap.json
.sih/scripts/: sih-id
.siheng/: config.yml
archive/philosophy-v1/: 240610-1500-sihankor-document-conventions.sih.md  On-SiHankor-Assay.sih.md  On-SiHankor-Tao.sih.md  On-SiHankor.sih.md  SiHankor-Doc-Migration-Patterns.sih.md  SiHankor-Engineering-Mapping.sih.md  SiHankor-External-Validation.sih.md  SiHankor-Five-Law-Check-Criteria.sih.md  SiHankor-Mind-Design.sih.md  SiHankor-Onomastic-Philosophy.sih.md  SiHankor-Philosophy-Arguments.sih.md
docs/decisions/: 260615-1500-docs-restructure-v2-decision.sih.md  260615-1530-decided-by-placement-decision.sih.md  260616-1200-engine-dev-governance-chain-decision.sih.md  260616-1210-post-restructure-doc-cleanup-decision.sih.md  260616-1500-engine-dev-governance-chain-decision.sih.md  260616-1530-post-restructure-doc-cleanup-decision.sih.md  260616-1800-plan-semantic-split-decision.sih.md  260616-1930-format-lint-decision.sih.md  (+11 more)
glossary/: zh.yml
scripts/: ci-check.sh  dashboard.sh  dsr2_fix.py  experiment_c.py  experiment_c_v2.py  fix_code_fences.py  fix_format.py  mcp_client.py
src/: lib.rs  main.rs
tests/: integration_test.rs  snapshot_diff_fatal_hardcode_test.rs
(+197 files in other folders)
