[package]
name = "sihankor"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
glob = "0.3"
walkdir = "2"
regex-lite = "0.1"
