[package]
name = "sihankor"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
glob = "0.3"
walkdir = "2"
regex-lite = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[lints.rust]
unsafe_code = "deny"
non_camel_case_types = "warn"
non_snake_case = "warn"
unused_variables = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
print_stdout = "deny"
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"
clone_on_copy = "warn"
cloned_instead_of_copied = "warn"
borrowed_box = "warn"
needless_return = "warn"
wildcard_imports = "warn"
single_match = "warn"
inline_always = "warn"
missing_const_for_fn = "warn"
todo = "warn"
unreachable = "warn"
